--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <article>
-  <p>Call it the long con. Call it a fluke. Call it whatever you'd like, but we found your podcast after ten years and it's back.</p>
+  <p>@tylerchilds Call it the long con. Call it a fluke. Call it whatever you'd like, but we found your podcast after ten years and it's back.</p>
 </article>
 
 <article>
